<resources>
	<string name="app_name">Popular Movies</string>
	<string name="sort_popularity">Most Popular</string>
	<string name="sort_rate">Highest Rated</string>
	<string name="sort_favorite">Favorites</string>
	<string name="internet_connection_msg">Please make sure you are connected to internet!</string>

	<string name="movie_title_text">The time of our lifes (Remake)</string>
	<string name="movie_release_date">Release Date</string>
	<string name="movie_release_date_text">01/01/2017</string>
	<string name="movie_vote_average">Vote Average</string>
	<string name="movie_vote_average_text">9.5</string>
	<string name="movie_vote_average_total">out of 10</string>
	<string name="movie_add_favorite">Favorite</string>
	<string name="movie_synopsis">Synopsis</string>
	<string name="movie_synopsis_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed blandit purus. Aliquam accumsan consectetur varius. Integer in venenatis lacus. Vestibulum ac velit dolor. Sed vel diam ligula. Nullam in euismod odio. Duis vitae placerat metus, at posuere erat. Aliquam commodo ante sed metus sodales, vitae suscipit nunc bibendum.</string>
	<string name="favorite_removed">Movie Removed from Favorites</string>
	<string name="favorite_added">Movie Added to Favorites</string>
	<string name="movie_trailers">Trailers</string>
	<string name="movie_reviews">Reviews</string>
	<string name="movie_reviews_author">Author</string>
	<string name="movie_share_trailer">Share</string>
	<string name="movie_share_trailer_url">Share URL</string>
	<string name="movie_share_type">text/plain</string>

	<string name="error_something_wrong">Something went wrong! Please try again.</string>
	<string name="error_async_fail">Failed to asynchronously load data.</string>

	<string name="msg_popular_movies">Fetch Most Popular Movies</string>
	<string name="msg_rated_movies">Fetch Highest Rated Movies</string>
	<string name="msg_favorite_movies">Fetch Favorite Movies</string>

</resources>
