<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<TextView
		android:id="@+id/movie_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/colorPrimaryLight"
		android:gravity="end"
		android:padding="15dp"
		android:text="@string/movie_title_text"
		android:textAllCaps="true"
		android:textColor="@color/colorWhite"
		android:textSize="26sp"
		android:textStyle="bold"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:baselineAligned="false"
		android:orientation="horizontal"
		android:padding="5dp">

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="10dp"
			android:layout_marginRight="10dp"
			android:layout_weight="1"
			android:orientation="vertical">

			<ImageView
				android:id="@+id/movie_poster"
				android:layout_width="185dp"
				android:layout_height="wrap_content"
				android:adjustViewBounds="true"
				android:scaleType="fitCenter"
				android:src="@drawable/no_poster_available"
				/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingBottom="5dp"
				android:paddingLeft="10dp"
				android:paddingTop="5dp"
				android:text="@string/movie_release_date"
				android:textAllCaps="true"
				android:textColor="@color/colorPrimaryDark"
				android:textSize="14sp"
				android:textStyle="bold"/>

			<TextView
				android:id="@+id/movie_release_date"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal|center_vertical"
				android:padding="20dp"
				android:text="@string/movie_release_date_text"
				android:textColor="@color/colorDetailText"
				android:textSize="20sp"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingBottom="5dp"
				android:paddingLeft="10dp"
				android:paddingTop="5dp"
				android:text="@string/movie_vote_average"
				android:textAllCaps="true"
				android:textColor="@color/colorPrimaryDark"
				android:textSize="14sp"
				android:textStyle="bold"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<LinearLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="2"
					android:orientation="vertical">

					<TextView
						android:id="@+id/movie_rating"
						android:layout_width="match_parent"
						android:layout_height="25dp"
						android:gravity="bottom|end"
						android:paddingRight="5dp"
						android:text="@string/movie_vote_average_text"
						android:textColor="@color/colorDetailText"
						android:textSize="20sp"/>
				</LinearLayout>

				<LinearLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="2"
					android:orientation="vertical">

					<TextView
						android:layout_width="match_parent"
						android:layout_height="25dp"
						android:gravity="bottom|start"
						android:paddingBottom="2dp"
						android:paddingLeft="5dp"
						android:text="@string/movie_vote_average_total"
						android:textColor="@color/colorDetailText"
						android:textSize="12sp"
						/>

				</LinearLayout>

			</LinearLayout>

			<Button
				android:id="@+id/bt_favorite"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="25dp"
				android:drawableStart="@drawable/heart_off"
				android:drawablePadding="10dp"
				android:paddingEnd="15dp"
				android:paddingLeft="15dp"
				android:paddingRight="15dp"
				android:paddingStart="15dp"
				android:text="@string/movie_add_favorite"
				android:textSize="12sp"
				/>
		</LinearLayout>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="5dp">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="5dp"
			android:paddingLeft="10dp"
			android:paddingTop="5dp"
			android:text="@string/movie_synopsis"
			android:textAllCaps="true"
			android:textColor="@color/colorPrimaryDark"
			android:textSize="14sp"
			android:textStyle="bold"/>

		<TextView
			android:id="@+id/movie_synopsis"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="10dp"
			android:text="@string/movie_synopsis_text"
			android:textColor="@color/colorDetailText"
			android:textSize="14sp"/>
	</LinearLayout>


</LinearLayout>